--- a/app/src/main/res/drawable/draw_search.xml
+++ b/app/src/main/res/drawable/draw_search.xml
@@ -11,10 +11,11 @@
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners
-        android:bottomLeftRadius="4dp"
-        android:topLeftRadius="4dp"
-        android:bottomRightRadius="4dp"
-        android:topRightRadius="4dp"
-        />
+        android:radius="15dp"   />
+        <!--android:bottomLeftRadius="4dp"-->
+        <!--android:topLeftRadius="4dp"-->
+        <!--android:bottomRightRadius="4dp"-->
+        <!--android:topRightRadius="4dp"-->
+
 
 </shape>
