--- a/app/src/main/res/drawable/price_draw_radio_left.xml
+++ b/app/src/main/res/drawable/price_draw_radio_left.xml
@@ -3,11 +3,11 @@
        android:shape="rectangle">
 
     <!-- 填充的颜色：这里设置背景透明 -->
-    <solid android:color="#f01e1e" />
+    <solid android:color="@color/ycMainColor" />
     <!-- 边框的颜色 ：不能和窗口背景色一样-->
     <stroke
         android:width="1dp"
-        android:color="#f01e1e" />
+        android:color="@color/ycMainColor" />
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners
