--- a/app/src/main/res/drawable/price_draw_radio_right.xml
+++ b/app/src/main/res/drawable/price_draw_radio_right.xml
@@ -3,7 +3,7 @@
           android:shape="rectangle">
 
     <!-- 填充的颜色：这里设置背景透明 -->
-    <solid android:color="#f01e1e" />
+    <solid android:color="@color/ycMainColor" />
     <!-- 边框的颜色 ：不能和窗口背景色一样-->
     <!--<stroke-->
     <!--android:width="2dp"-->
