--- a/app/src/main/res/drawable/tab_state_me.xml
+++ b/app/src/main/res/drawable/tab_state_me.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_checked="true"
-        android:drawable="@mipmap/me_pressed3"/>
-    <item android:drawable="@mipmap/me_nomal3"/>
+        android:drawable="@drawable/ic_tab_user_pressed"/>
+    <item android:drawable="@drawable/ic_tab_user_normal"/>
 </selector>
