--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,28 +1,89 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               tools:context="com.example.hnTea.ui.home.HomeFragment">
+   <android.support.design.widget.CoordinatorLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
 
 
-
-    <com.example.hnTea.widget.AppTitleBar
-        android:id="@+id/app_title_bar"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/layout_appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
+        <TextView
+            android:id="@+id/state_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/stateColor"
+            android:clipToPadding="true"
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|enterAlways"
+            />
+        <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ededed"
+            android:backgroundTint="@color/ycMainColor"
+            app:layout_scrollFlags="scroll|enterAlways"
+            >
+
+            <TextView
+                android:id="@+id/query"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_toRightOf="@+id/logo"
+                android:background="@drawable/draw_search"
+                android:drawableLeft="@mipmap/home_search"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center|left"
+                android:hint="搜索询价，报价信息"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="5dp"
+                android:singleLine="true"
+                android:textColorHint="#8C8C8C"
+                />
+
+            <ImageButton
+                android:id="@+id/top_search_clear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="3dp"
+                android:background="@android:color/transparent"
+                android:padding="6dp"
+                android:src="@mipmap/search_clear"
+                android:visibility="invisible"/>
+        </RelativeLayout>
+    </android.support.design.widget.AppBarLayout>
     <com.github.jdsjlzx.recyclerview.LRecyclerView
         android:id="@+id/home_listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@color/fragment_bg">
+        android:divider="@color/fragment_bg"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
     </com.github.jdsjlzx.recyclerview.LRecyclerView>
-    <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:id="@+id/home_listView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:divider="@color/fragment_bg"-->
-        <!--/>-->
+     <!--<android.support.v7.widget.RecyclerView-->
+    <!--android:id="@+id/home_listView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:divider="@color/fragment_bg"-->
+    <!--/>-->
 
-
+   </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
