--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="colorPrimary">#3F51B5</color>
+    <color name="ycMainColor">#efb96f</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
@@ -10,7 +12,7 @@
 
     <color name="PopwindowBg">#000000</color>
 
-    <color name="stateColor">#e93036</color>
+    <color name="stateColor">#efb96f</color>
 
     <color name="addShopColor">#4d4d4d</color>
 
