询报价修改完成，中间tab popfragment修改完成，我的订单我的询价单修改完成

--- a/app/src/main/res/drawable/dialog_ok_selector.xml
+++ b/app/src/main/res/drawable/dialog_ok_selector.xml
@@ -3,7 +3,7 @@
 
 
     <!-- 填充的颜色：这里设置背景透明 -->
-    <solid android:color="#ba5255"
+    <solid android:color="@color/ycMainColor_click"
 
         />
     <!-- 边框的颜色 ：不能和窗口背景色一样-->
