--- a/app/src/main/res/layout/fragment_my_inquiry.xml
+++ b/app/src/main/res/layout/fragment_my_inquiry.xml
@@ -86,13 +86,13 @@
             android:textSize="13sp"
             app:pstsDividerColor="@android:color/transparent"
             app:pstsDividerPaddingTopBottom="8dp"
-            app:pstsIndicatorColor="@color/price_viewColor"
+            app:pstsIndicatorColor="@color/ycMainColor"
             app:pstsIndicatorHeight="2dp"
             app:pstsScaleZoomMax="0.1"
             app:pstsShouldExpand="true"
             app:pstsSmoothScrollWhenClickTab="true"
             app:pstsTabPaddingLeftRight="5dp"
-            app:pstsTextSelectedColor="@color/price_textColor_pressed"
+            app:pstsTextSelectedColor="@color/ycMainColor"
             app:pstsUnderlineColor="@android:color/transparent"
             app:pstsUnderlineHeight="1dp"/>
         <com.example.hnTea.widget.PagerSlidingTabStrip
