--- a/app/src/main/res/layout/fragment_my_order.xml
+++ b/app/src/main/res/layout/fragment_my_order.xml
@@ -37,13 +37,13 @@
             android:textSize="13sp"
             app:pstsDividerColor="@android:color/transparent"
             app:pstsDividerPaddingTopBottom="8dp"
-            app:pstsIndicatorColor="@color/price_viewColor"
+            app:pstsIndicatorColor="@color/ycMainColor"
             app:pstsIndicatorHeight="2dp"
             app:pstsScaleZoomMax="0.1"
             app:pstsShouldExpand="false"
             app:pstsSmoothScrollWhenClickTab="false"
             app:pstsTabPaddingLeftRight="15dp"
-            app:pstsTextSelectedColor="@color/tabBarColor"
+            app:pstsTextSelectedColor="@color/ycMainColor"
             app:pstsUnderlineColor="@android:color/transparent"
             />
     </RelativeLayout>
