--- a/app/src/main/res/layout/user_info_foot_view.xml
+++ b/app/src/main/res/layout/user_info_foot_view.xml
@@ -21,7 +21,7 @@
         android:background="@drawable/image_selector"
         android:gravity="center"
         android:text="退出登录"
-        android:textColor="@color/tipsColor"
+        android:textColor="@color/ycMainColor"
 
         />
 
