--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <color name="colorPrimary">#3F51B5</color>
     <color name="ycMainColor">#efb96f</color>
+    <color name="ycMainColor_click">#e4c69c</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
