--- a/app/src/main/res/drawable/dialog_ok_normal.xml
+++ b/app/src/main/res/drawable/dialog_ok_normal.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- 填充的颜色：这里设置背景透明 -->
-    <solid android:color="#e24a4e" />
+    <solid android:color="@color/ycMainColor" />
     <!-- 边框的颜色 ：不能和窗口背景色一样-->
     <!--<stroke-->
         <!--android:width="1dp"-->
