--- a/app/src/main/res/drawable/draw_add_partner.xml
+++ b/app/src/main/res/drawable/draw_add_partner.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- 填充的颜色：这里设置背景透明 -->
-    <solid android:color="#e24a4e" />
+    <solid android:color="@color/ycMainColor" />
     <!-- 边框的颜色 ：不能和窗口背景色一样-->
     <stroke
         android:width="1dp"
-        android:color="#e24a4e" />
+        android:color="@color/ycMainColor" />
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners
