--- a/app/src/main/res/drawable/draw_add_partner_selector.xml
+++ b/app/src/main/res/drawable/draw_add_partner_selector.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- 填充的颜色：这里设置背景透明 -->
-    <solid android:color="#ba5255"
+    <solid android:color="@color/ycMainColor_click"
 
         />
     <!-- 边框的颜色 ：不能和窗口背景色一样-->
     <stroke
         android:width="1dp"
-        android:color="#ba5255" />
+        android:color="@color/ycMainColor_click" />
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners
