--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,33 +8,23 @@
     android:background="@mipmap/login_bg_1"
 
     >
-
     <TextView
         android:id="@+id/login_top"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:text="登录"
         android:gravity="center"
+        android:layout_marginRight="15dp"
         android:textColor="@color/white"
         android:drawableLeft="@mipmap/login_back"
         android:fitsSystemWindows="true"
+        android:textSize="15sp"
         />
 
-    <ImageView
-        android:id="@+id/login_logo_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/login_top_2"
-        android:layout_below="@+id/login_top"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"/>
-
-
     <RelativeLayout
-        android:layout_below="@+id/login_logo_text"
         android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="200dp"
         android:layout_marginLeft="47dp"
         android:layout_marginRight="47dp"
         android:background="@drawable/login_edtext"
