--- a/app/src/main/res/layout/fragment_add_partner.xml
+++ b/app/src/main/res/layout/fragment_add_partner.xml
@@ -28,7 +28,7 @@
             android:text="合伙人"
             android:gravity="center"
             android:layout_weight="1"
-            android:textColor="@color/tipsColor"
+            android:textColor="@color/ycMainColor"
             android:background="@drawable/btn_selecor"
             />
 
