--- a/app/src/main/res/layout/fragment_price.xml
+++ b/app/src/main/res/layout/fragment_price.xml
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="horizontal"
-        android:layout_below="@+id/root"
+        android:layout_below="@+id/price_utilView"
         android:layout_toEndOf="@+id/campus_viewpager1">
 
 
@@ -98,7 +98,7 @@
                 style="@style/price_top_tv"
                 android:layout_centerInParent="true"
                 android:text="@string/price_xun_single"
-                android:textColor="@color/tabBarColor"
+                android:textColor="@color/ycMainColor"
                 />
         </RelativeLayout>
         <ImageView
