--- a/app/src/main/res/layout/partner_include.xml
+++ b/app/src/main/res/layout/partner_include.xml
@@ -60,7 +60,7 @@
             android:layout_width="80dp"
             android:layout_height="34dp"
             android:text="获取验证码"
-            android:textColor="@color/me_price_red_title"
+            android:textColor="@color/ycMainColor"
             android:background="@drawable/draw_sms"
             android:gravity="center"
             android:textSize="13sp"
