--- a/app/src/main/res/layout/fragment_shop_msg.xml
+++ b/app/src/main/res/layout/fragment_shop_msg.xml
@@ -40,7 +40,7 @@
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                android:background="@mipmap/placeholder"
+                android:background="@mipmap/pic_banner_moren"
                 />
 
             <LinearLayout
