--- a/app/src/main/res/layout/my_order_list_item.xml
+++ b/app/src/main/res/layout/my_order_list_item.xml
@@ -80,7 +80,7 @@
         android:layout_below="@+id/myOrder_list_item_OrderTitle"
         android:gravity="center"
         android:layout_marginTop="20dp"
-        android:textColor="@color/tipsColor"
+        android:textColor="@color/ycMainColor"
         />
 
     <ImageView
