--- a/app/src/main/res/layout/x_price_single_list_item.xml
+++ b/app/src/main/res/layout/x_price_single_list_item.xml
@@ -39,7 +39,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/XPrice_listItem_time"
-        android:drawableLeft="@mipmap/price_brand2"
+        android:drawableLeft="@mipmap/ic_price_brand"
         android:text="施耐德"
         android:gravity="center_vertical"
         android:textColor="@color/price_textColor_nomal"
@@ -53,7 +53,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/XPrice_listItem_location"
-        android:drawableLeft="@mipmap/price_amount2"
+        android:drawableLeft="@mipmap/ic_price_amount"
         android:text="5台"
         android:gravity="center_vertical"
         android:textColor="@color/price_textColor_nomal"
