--- a/app/src/main/res/layout/xj_project_footer.xml
+++ b/app/src/main/res/layout/xj_project_footer.xml
@@ -18,7 +18,7 @@
             android:layout_weight="1"
             android:text="陕西省西安市"
             android:gravity="center_vertical"
-            android:drawableLeft="@mipmap/price_location2"
+            android:drawableLeft="@mipmap/ic_price_location"
             android:layout_height="wrap_content"/>
 
         <TextView
@@ -27,7 +27,7 @@
             android:layout_weight="1"
             android:text="建筑"
             android:gravity="center_vertical"
-            android:drawableLeft="@mipmap/price_type2"
+            android:drawableLeft="@mipmap/ic_price_type"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
