--- a/app/src/main/res/layout/xprice_list_item.xml
+++ b/app/src/main/res/layout/xprice_list_item.xml
@@ -38,7 +38,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/XPrice_listItem_time"
-        android:drawableLeft="@mipmap/price_location2"
+        android:drawableLeft="@mipmap/ic_price_location"
         android:text="陕西省"
         android:ems="4"
         android:lines="1"
@@ -54,7 +54,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/XPrice_listItem_location"
-        android:drawableLeft="@mipmap/price_type2"
+        android:drawableLeft="@mipmap/ic_price_type"
         android:text="建筑"
         android:gravity="center_vertical"
         android:textColor="@color/price_textColor_nomal"
@@ -68,7 +68,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/XPrice_listItem_type"
-        android:drawableLeft="@mipmap/price_stage1"
+        android:drawableLeft="@mipmap/ic_price_stage"
         android:text="实施阶段"
         android:maxEms="5"
         android:lines="1"
