--- a/app/src/main/res/layout/dialog_user_config.xml
+++ b/app/src/main/res/layout/dialog_user_config.xml
@@ -7,18 +7,11 @@
     >
 
 
-    <ScrollView
+    <WebView
+        android:id="@+id/register_webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/userConfig_tv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            />
-
-
-    </ScrollView>
+    </WebView>
 
 </LinearLayout>
