--- a/app/src/main/res/layout/fragment_bill_question.xml
+++ b/app/src/main/res/layout/fragment_bill_question.xml
@@ -9,12 +9,11 @@
         android:id="@+id/app_title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/billQuestion_tv"
+    <WebView
+        android:id="@+id/common_question_webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp"
-        />
+        android:layout_height="match_parent">
+
+    </WebView>
 
 </LinearLayout>
