--- a/app/src/main/res/layout/fragment_business_yellow_pages.xml
+++ b/app/src/main/res/layout/fragment_business_yellow_pages.xml
@@ -14,8 +14,9 @@
         android:layout_width="match_parent"
         app:tabBackground="@color/white"
         app:tabTextColor="@color/black"
-        app:tabSelectedTextColor="@color/tabBarColor"
+        app:tabSelectedTextColor="@color/ycMainColor"
         android:layout_height="wrap_content"
+        app:tabIndicatorColor="@color/ycMainColor"
         android:id="@+id/yellow_page_tab_layout"/>
 
     <android.support.v4.view.ViewPager
