--- a/app/src/main/res/layout/home_hlist_item.xml
+++ b/app/src/main/res/layout/home_hlist_item.xml
@@ -46,7 +46,7 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/home_HListView_title"
-        android:text="$360"
+        android:text="￥360"
         android:textSize="15sp"
         android:layout_marginTop="3dp"
         android:textColor="@color/price_viewColor"
