豫茶细节修改

--- a/app/src/main/res/layout/fragment_shop_detail.xml
+++ b/app/src/main/res/layout/fragment_shop_detail.xml
@@ -49,7 +49,7 @@
             android:textSize="15sp"
             app:pstsDividerColor="@android:color/transparent"
             app:pstsDividerPaddingTopBottom="8dp"
-            app:pstsIndicatorColor="@color/price_viewColor"
+            app:pstsIndicatorColor="@color/ycMainColor"
             app:pstsIndicatorHeight="2dp"
             app:pstsScaleZoomMax="0.1"
             app:pstsShouldExpand="false"
