--- a/app/src/main/res/layout/home_listdetail_list_item.xml
+++ b/app/src/main/res/layout/home_listdetail_list_item.xml
@@ -32,11 +32,11 @@
         android:id="@+id/home_listDetail_listItem_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/home_listDetail_listItem_type"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="3dp"
         android:layout_toRightOf="@+id/home_listDetail_listItem_image"
-        android:text="1.71/件"
+        android:layout_alignBottom="@id/home_listDetail_listItem_image"
+        android:text="¥178。00"
         android:textColor="@color/price_viewColor"
         />
 
