--- a/app/src/main/res/layout/me_list_header.xml
+++ b/app/src/main/res/layout/me_list_header.xml
@@ -12,6 +12,18 @@
         />
 
     <ImageView
+        android:id="@+id/me_shopping"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@mipmap/shopping"
+        android:padding="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/btn_selecor"
+        />
+
+    <ImageView
         android:id="@+id/me_listHeader_icon"
         android:layout_width="80dp"
         android:layout_height="80dp"
